see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

21-Jul-2010 Andrew Eddie
 # Fixed issue [#20880] fatal error trying to view template positions (Rob Joyce, Rune Sjøen).
 # Fixed issue [#21394] Problem with submenu translation in 3rd party extensions (Rune Sjøen).
 # Fixed issue [#21452] Use rel="help" for the help button in the toolbar (Rouven Weßling).
 # Fixed issue [#21438] Adding categories (Rune Sjøen).
 # Fixed issue [#21247] HTML comments shouldn't be used to guard JavaScript (Rouven Weßling).
 # Fixed issue [#21335] Sort by descending causes issues with ordering in Category and Menu Managers (Michael Babker).
 # Fixed issue [#21250] Token message Error on Install Sample Data (Pete Nurse).
 # Fixed issue [#21178] Dropdown on Extension manager>Manage to filter results in error - ? due to ftp fields attempting to be populated (Ruth Cheesley, Bill Richardson).
 # Fixed issue [#20751] Fix some markup errors and bring installer closer to XHTML strict (Rouven Weßling).
 # Fixed issue [#21339] JFile::Write() returns wrong value (Janich Rasmussen, Artyom Bisyarin).
 # Fixed issue [#21436] Database Error should return "500 Internal Server Error" so Joomla! can operate properly in CDNs (Klas Berlič1).
 # Fixed issue [#20381] Readme file (Paulo Izidoro).
 # Fixed issue [#21517] modSearchHelper's methods should be public static (Franklin Tse).
 # Fixed issue [#20879] missing functionality Save and New (Rob Joyce, Joseph LeBlanc).
 # Fixed issue [#21515] ContentHelperQuery's methods should be public static (Franklin Tse).
 
21-Jul-2010 Jean-Marie Simonet
 $ Changing all occurences of :: to : : in strings' values to avoid breaking tooltips
 